@@ -51,7 +51,10 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # $Log$
-# Revision 1.22  2006-01-29 17:49:52  tino
+# Revision 1.23  2006-03-17 00:29:55  tino
+# Improved method for "make test"
+#
+# Revision 1.22  2006/01/29 17:49:52  tino
 # Improved documentation and "make test"
 #
 # Revision 1.21  2005/12/05 02:11:12  tino
@@ -158,5 +161,9 @@ tino:
 check:
 	false
 
-test:
+test:	$(UNITTEST)/Makefile
+	$(MAKE) -s -C $(UNITTEST)
+
+$(UNITTEST)/Makefile:	Makefile Makefile-test.sh
+	$(RM) -r $(UNITTEST)
 	$(BASH) Makefile-test.sh $(UNITTEST)
